[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "response-handler"
version = "1.0.0"
description = "A reusable package for standardized API response handling"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/response-handler"
Repository = "https://github.com/yourusername/response-handler.git"

[tool.setuptools]
packages = ["response_handler"]