[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microservices-utils"
version = "1.0.0"
description = "A collection of reusable utilities for microservices development"
authors = [
    {name = "Angel De Leon", email = "49047072+AngelDeLeon96@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/AngelDeLeon96/microservices-utils"
Repository = "https://github.com/AngelDeLeon96/microservices-utils.git"

[tool.setuptools]
packages = ["microservices_utils"]